# MLBlock

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  EXPLICATION.md  README.md  Reunion.md  TODO.md  class_bricks.md  class_diagramm.md  demo.py  main.py  mlblock.db  plan.md  pyproject.toml  render.yaml  requirements.txt
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements.txt  test_gen.py
backend/alembic/: env.py
backend/alembic/versions/: ac43eefb1e01_add_foreign_key_constraints_and_cascade.py  b1d2e3f4a5c6_add_job_status_check_constraint.py
backend/mlblock/: demo.py
backend/mlblock/blocks/: registry.py
backend/mlblock/blocks/advanced_6B7280/: auto_ml.py  code_block.py
backend/mlblock/blocks/data_22C55E/: load_csv.py
backend/mlblock/blocks/data_loader_7C3AED/: data_loader.py  random_split.py  tensor_dataset.py
backend/mlblock/blocks/environment_14B8A6/: frame_stack.py  gym_env.py  single_env.py  time_limit.py
backend/mlblock/blocks/evaluation_EF4444/: evaluate.py
backend/mlblock/blocks/models_F59E0B/: decision_tree.py  knn.py  linear_regression.py  logistic_regression.py  pca.py  standard_scaler.py  svm.py
backend/mlblock/blocks/neural_6366F1/: batchnorm1d.py  batchnorm2d.py  (+17 more)
backend/mlblock/core/: block.py  config.py  generator.py  pipeline.py  vast.py
backend/mlblock/models/: __init__.py  pipeline.py  registry.py
backend/mlblock/server/: __main__.py  auth.py  database.py  main.py  models.py  routes.py  schemas.py
backend/mlblock/tests/: conftest.py  test_auth.py  test_block.py  test_config.py  test_server.py
(+363 files in other folders)
