[project]
name = "mlblock"
version = "0.1.0"
description = "MLBlock - visual block builder for PyTorch neural networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
