[project]
name = "mlblock"
version = "0.1.0"
description = "MLBlock - visual block builder for PyTorch neural networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "python-jose>=3.5.0",
    "cryptography>=49.0.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "gymnasium>=1.3.0",
    "stable-baselines3>=2.9.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "alembic>=1.15.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
